--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Solawi Allerlei</title>
+    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="icon" href="favicon.ico"/>
+    <meta name="description" content="Solawi Allerlei ist eine solidarische Landwirtschaft in Leipzig Dölitz-Dösen. Wir bauen frisches Gemüse direkt auf dem Acker an und bieten wöchentliche Gemüsekisten für unsere Mitglieder an." />
   </head>
   <body>
     <div id="app"></div>
